# former

./: .cproject  .gitignore  .project  CMakeLists.txt  README
cmake/: FindIrrlicht.cmake  FindJsonCpp.cmake  FindirrBullet.cmake
cmake/misc/: CMakeLists.txt
contrib/irrBullet/: CMakeLists.txt  fix-irrBullet-includes.sh
contrib/irrBullet/cmake/: FindIrrlicht.cmake
data/: autoexec.json  data-todo.txt  init.json  test.3ds
data/fonts/: font_large.xml  font_medium.xml  font_small.xml
data/parts/: .materials.json.swp  materials.json  parts.txt
data/parts/body/armored/apc/: part.json
data/parts/body/flying/fly-chasis-01/: fly-chasis-01.blend  fly-chasis-01.blend1
data/parts/body/flying/fly-transport-01/: fly-transport-01.blend
data/parts/body/ground/apc/: apc-01.blend  apc-01.dae
data/parts/body/ground/board-01/: board-01.blend  board-01.blend1
data/parts/containers/energy/cell-rechargeable-01/: cell-rechargeable-01.3ds  cell-rechargeable-01.blend  cell-rechargeable-01.blend1
data/parts/containers/material/material-container-01/: material-container-01.3ds  material-container-01.blend  material-container-01.blend1
data/parts/containers/ore/ore-container-01/: part.json
data/parts/equipment/harvest/bur-combine-01/: bur-combine-01.3ds  bur-combine-01.blend
data/parts/equipment/weapon/laser-01/: .part.json.swp  laser-01.3ds  laser-01.blend  laser-01.blend1  part.json
data/parts/lights/backlight/: part.json
data/parts/lights/headlight/: headlight-01.3ds  headlight-01.blend  headlight-01.blend1  part.json
data/parts/lights/sidelight/: part.json
data/parts/propulsion/aero-shielded-01/: aero-shielded-01.3ds  aero-shielded-01.blend  aero-shielded-01.blend1
data/parts/propulsion/crawler-01/: crawler-01.3ds  crawler-01.blend  crawler-01.blend1
data/parts/propulsion/wheel-01/: wheel-01.3ds  wheel-01.blend  wheel-01.blend1
data/parts/propulsion/wheel-1/: part.json
data/parts/structures/desintegrator/: desintegrator.3ds  desintegrator.blend  desintegrator.blend1
data/parts/structures/vehicle_factory/: vehicle_factory.3ds  vehicle_factory.blend  vehicle_factory.blend1
data/scenes/generic/: scene.json  scene.lua
data/scripts/console/: quit.lua  shell.lua  test.lua
data/stages/teststage/: Scene.irr  stage.blend  stage.blend1  stage.json  stage.lua
data/stages/teststage/mdl/: ground.irrmesh  owen.irrmesh
data/stages/teststage2/: stage.blend  stage.blend1
src/: CMakeLists.txt  config.cpp  config.h  configuration.cpp  configuration.h  console.cpp  console.h  engine.cpp  engine.h  evt_reciever.h  graphics.cpp  graphics.h  input.cpp  input.h  instruction.h  interface.cpp  interface.h  logger.cpp  logger.h  main.cpp  material.h  parser.cpp  parser.h  part.cpp  part.h  physics.cpp  physics.h  player.h  scripting.cpp  scripting.h  serializer.cpp  serializer.h  singleton.h  singleton2.cpp  singleton2.h  singleton3.h  stage.cpp  stage.h  stagemgr.cpp  stagemgr.h  (+9 more)
src/parts/: battery.cpp  battery.h
src/states/: gameflow.cpp  gameflow.h  splash_image.cpp  splash_image.h  splash_video.cpp  splash_video.h  state.cpp  state.h  video.cpp  video.h
src/utils/: console.cpp
utils/: check-json.py
utils/part-editor/: part-editor.py
utils/part-editor/pted/: gui.py  part.py
utils/part-editor/res/: part-editor.glade
